@@ -503,8 +503,8 @@ val _ = Context.>> (Context.map_theory
   register_config Printer.show_types_raw #>
   register_config Printer.show_structs_raw #>
   register_config Printer.show_question_marks_raw #>
-  register_config Syntax.ambiguity_level_raw #>
-  register_config Syntax.ambiguity_warnings_raw #>
+  register_config Syntax.ambiguity_raw #>
+  register_config Syntax.ambiguity_limit_raw #>
   register_config Syntax_Trans.eta_contract_raw #>
   register_config Name_Space.names_long_raw #>
   register_config Name_Space.names_short_raw #>
